[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hello my name is shasin
+            Welcome to React-Express App
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
