--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     </head>
     <body>
         <div class="center">
