[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,7 @@
         <div class="center text-big bold">
             Welcome to React-Express App
         </div>
+        <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>button</a>
         
         <script type="text/javascript" src="/ui/main.js">
         </script>
