--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
             Welcome to React-Express App
         </div>
         
-        <div>
+        <div class="center-align">
             <a class="waves-effect waves-light btn-large">
                 <i class="material-icons left">cloud</i>button
             </a>
