[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -28,7 +28,8 @@
         
         <div class="center-align">
             <a class="waves-effect waves-light btn-large">
-                <i class="material-icons left">cloud</i>button
+                <i class="material-icons left">cloud</i>
+                Explore
             </a>
         </div>
         
