--- a/ui/index.html
+++ b/ui/index.html
@@ -29,7 +29,7 @@
             
             <div class="center-align">
                 <a class="waves-effect waves-light btn-large">
-                    <i class="material-icons left">cloud</i>
+                    <i class="material-icons left">account_circle</i>
                     Explore
                 </a>
             </div>
