--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
             <div class="center-align">
                 <a class="waves-effect waves-light btn-large">
                     <i class="material-icons left">account_circle</i>
-                    Explore
+                    <p id="clock-div"></p>
                 </a>
             </div>
         </div>
