[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,6 +31,7 @@
             <div class="center-align">
                 <a class="waves-effect waves-light btn-large">
                     <i class="material-icons left">account_circle</i>
+                    Explore
                 </a>
             </div>
             
